# 0710code_HIWIM_Dual_Arm_Robot

./: PORTING_NEW_ROBOT.md  README.md  command.txt  github_push.txt  setup_and_push.sh
install/: local_setup.sh  setup.sh
lag_data/1783662347_GD/: danger_final.csv  danger_rounds.csv  inner.csv  meta.csv  summary.csv  targets.csv
log/: latest_build
src/: README_For_hiwin_dual_arm.md
src/0710_code/dual_arm_alm_cg_planner/: CMakeLists.txt  PARAMETERS.md  README.md  package.xml
src/0710_code/dual_arm_alm_gd_planner/: CMakeLists.txt  PARAMETERS.md  README.md
src/0710_code/dual_arm_alm_newton_planner/: PARAMETERS.md  README.md  dual_arm_alm_newton_planner.xml
src/0710_code/dual_arm_lag_cg_planner/: CMakeLists.txt  PARAMETERS.md  README.md
src/0710_code/dual_arm_lag_gd_planner/: README.md
src/0710_code/dual_arm_lag_newton_planner/: CMakeLists.txt  README.md  dual_arm_lag_newton_planner.xml  package.xml
src/0710_code/hiwin_description/: CMakeLists.txt  package.xml
src/For_hiwin_dual_arm/dual_arm_alm_newton_planner/: CMakeLists.txt
src/For_hiwin_dual_arm/dual_arm_domain_bridge (7)/dual_arm_domain_bridge/: CMakeLists.txt  README.md  package.xml
src/For_hiwin_dual_arm/dual_arm_domain_bridge (7)/dual_arm_domain_bridge/include/dual_arm_domain_bridge/: multi_context.hpp
src/For_hiwin_dual_arm/dual_arm_domain_bridge (7)/dual_arm_domain_bridge/launch/: bridge_relay.launch.py
src/For_hiwin_dual_arm/dual_arm_domain_bridge (7)/dual_arm_domain_bridge/src/: joint_state_uplink_bridge.cpp  trajectory_downlink_endpoint_relay.cpp
src/For_hiwin_dual_arm/dual_arm_lag_gd_planner/: PARAMETERS.md  dual_arm_lag_gd_planner.xml
src/For_hiwin_dual_arm/dual_arm_lag_newton_planner/: PARAMETERS.md  README.md
src/For_hiwin_dual_arm/hiwin_dual_arm/: .setup_assistant  README.md  package.xml
src/For_hiwin_dual_arm/hiwin_dual_arm_description/: CMakeLists.txt  NOTICE
src/dual_arm_alm_cg_planner/src/: data_io.cpp
src/dual_arm_alm_gd_planner/: dual_arm_alm_gd_planner.xml  package.xml
src/dual_arm_alm_gd_planner/src/: gd_solver.cpp
src/dual_arm_lag_cg_planner/: CODE_WALKTHROUGH.md
src/dual_arm_lag_gd_planner/: CMakeLists.txt  package.xml
(+546 files in other folders)
