<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dual_arm_domain_bridge</name>
  <version>1.0.0</version>
  <description>Cross-domain bridges: joint_state uplink (rename+merge) and trajectory downlink (split+strip-prefix) for dual-arm stock drivers</description>
  <maintainer email="mfpss910727@gmail.com">john</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
